quoting-CypressTK1/force-app/main/default/objects/VolumeDiscount__c/VolumeDiscount__c.object-meta.xml
<CustomObject>
    <description>Contains volume discount record</description>
    <label>Volume Discount</label>
    <nameField>
        <displayFormat>QVD-{00000}</displayFormat>
        <label>Volume Discount</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volume Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>