quoting-CypressTK1/force-app/main/default/objects/VolumeDiscount__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Picklist of available category selections for quote volume discount</description>
    <inlineHelpText>Choose your quote volume discount category</inlineHelpText>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Headcount</fullName>
                <label>Headcount Discount</label>
            </value>
            <value>
                <fullName>Labor Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>