quoting-CypressTK1/force-app/main/default/objects/VolumeDiscount__c/fields/QuoteId__c.field-meta.xml
<CustomField>
    <fullName>QuoteId__c</fullName>
    <description>Relationship to parent Quote record</description>
    <inlineHelpText>Relationship to parent Quote record</inlineHelpText>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Volume Discounts</relationshipLabel>
    <relationshipName>VolumeDiscounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>