quoting-CypressTK1/force-app/main/default/objects/VolumeDiscount__c/fields/TotalBy__c.field-meta.xml
<CustomField>
    <fullName>TotalBy__c</fullName>
    <description
	>Selection indicating at what level to apply tier discount details to total whether at the overall quote level, quote period or period group level.</description>
    <inlineHelpText>Choose which level to apply the volume discount</inlineHelpText>
    <label>Total by</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Period</fullName>
            </value>
            <value>
                <fullName>Period Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>